        System: fixed timezone not being set in CLI scripts
		System: fixed bug preventing activity day from being correctly shown in Parent Dashboard
        System: added login options to Login with Google button
        System: added mbstring extension to the system requirements list
		System: fixed text alginment in module menu
		Activities: added new payment fields to activities (cost type and cost status)
		Attendance: fixed GROUP BY issue in moduleFunctions.php when MySQL is using only_full_group_by
		Attendance: adjusted attendance checking CLI script to only include lessons whose start time has already passed
		Attendance: show staff dashboard link to attendance only if user has access to Form Group attendance
		Attendance: added count column to Students Not Present and Students Not Onsite reports
		Behaviour: fixed typo in three settings
		Departments: fixed bug preventing students from seeing other students in a class
		Finance: set name of outgoing email to school name, not user's name
		Individual Needs: added ability to record educational assistants for a student
		Library: added Optical Media as item type
		Library: added replacement fields to import
		Planner: updated attendance to only hide the reason and comment fields if Present is the default attendance
		Roll Groups: fixed bug preventing alerts from showing
		School Admin: updated Manage School Years to prevent removing or unsetting the current School Year
        School Admin: added an Assign Houses tool to bulk assign students to houses by Year Group
		Students: fixed School History section in Student Profile to exclude upcoming years
		Students: fixed Application Form for logged in users not selecting a family by default (if one exists)
		Students: fixed interface string issue in student details screen
		Students: fixed display of Other Fields heading for parents in Application Form
        Students: added a notification event for Application Form Accepted