@@ -42,6 +42,7 @@ v15.0.00
         System: added login options to Login with Google button
         System: added mbstring extension to the system requirements list
 		System: fixed text alginment in module menu
+		System: fixed long-string and large image issue causing content to bleed under sidebar
 		Activities: added new payment fields to activities (cost type and cost status)
 		Attendance: fixed GROUP BY issue in moduleFunctions.php when MySQL is using only_full_group_by
 		Attendance: adjusted attendance checking CLI script to only include lessons whose start time has already passed
